clusters/k3s/apps/mealie/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
  namespace: mealie
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}  # Allow all ingress
  egress:
    - {}  # Allow all egress
